infra/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wersit35/shello-backend:latest
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: uploads-data
              mountPath: /app/uploads
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: uploads-data
          persistentVolumeClaim:
            claimName: uploads-data
