infra/k8s/frontend-en-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-en
  namespace: shello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-en
  template:
    metadata:
      labels:
        app: frontend-en
    spec:
      containers:
        - name: frontend-en
          image: wersit35/shello-frontend:v0.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 4201
