infra/k8s/frontend-ka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ka
  namespace: shello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-ka
  template:
    metadata:
      labels:
        app: frontend-ka
    spec:
      containers:
        - name: frontend-ka
          image: wersit35/shello-frontend:v0.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
