infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shello-ingress
  namespace: shello
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shellotech.eu.org
      secretName: shellotech-eu-org-tls
  rules:
    - host: shellotech.eu.org
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /uploads/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /en/
            pathType: Prefix
            backend:
              service:
                name: frontend-en
                port:
                  number: 4201
          - path: /ka/
            pathType: Prefix
            backend:
              service:
                name: frontend-ka
                port:
                  number: 4200
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ka
                port:
                  number: 4200
